Fix: Vercel 배포 설정 수정 및 이미지 파일 문제 해결 - vercel.json에서 모든 정적 파일 배포하도록 수정 - pm-background.png 의존성 제거하고 CSS 그라데이션으로 대체 - 404 오류 해결

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="home-page" class="page-content">
         <!-- 히어로 섹션 -->
         <section class="hero">
-            <div class="hero-image" style="background-image: url('pm-background.png');">
+            <div class="hero-image">
                 <div class="hero-overlay">
                     <div class="container">
                         <div class="hero-content">
