Fix: 파일 경로 문제 완전 해결 - HTML에서 모든 파일 경로를 상대경로(./)로 수정 - Vercel 배포 설정에서 각 파일을 명시적으로 지정 - 404 오류 및 JavaScript 로딩 문제 해결

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PM 커뮤니티 - PM들의 수다</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -15,7 +15,7 @@
             <div class="header-content">
                 <div class="logo">
                     <a href="#" onclick="showHomePage()">
-                        <img src="pm-logo.jpg" alt="PM 로고" class="logo-img">
+                        <img src="./pm-logo.jpg" alt="PM 로고" class="logo-img">
                     </a>
                 </div>
                 <nav class="nav">
@@ -432,8 +432,8 @@
         </div>
     </footer>
 
-    <script src="firebase-config.js"></script>
-    <script src="board.js"></script>
-    <script src="script.js"></script>
+    <script src="./firebase-config.js"></script>
+    <script src="./board.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html> 
