--- a/index.html
+++ b/index.html
@@ -26,13 +26,32 @@
                 </div>
                 <nav class="nav">
                     <ul class="nav-list">
-                        <li><a href="#" onclick="showBoard('job-info')">직무</a></li>
+                        <!-- PM에 대해 드롭다운 -->
+                        <li class="nav-dropdown">
+                            <a href="#" class="dropdown-toggle">
+                                PM에 대해 <i class="fas fa-chevron-down"></i>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" onclick="showBoard('job-info')"><i class="fas fa-briefcase"></i> 직무</a></li>
+                                <li><a href="#" onclick="showBoard('faq')"><i class="fas fa-question-circle"></i> 자주나오는 질문</a></li>
+                            </ul>
+                        </li>
+                        
+                        <!-- PM을 위한 공부 드롭다운 -->
+                        <li class="nav-dropdown">
+                            <a href="#" class="dropdown-toggle">
+                                PM을 위한 공부 <i class="fas fa-chevron-down"></i>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" onclick="showBoard('news')"><i class="fas fa-newspaper"></i> 뉴스</a></li>
+                                <li><a href="#" onclick="showBoard('policy-library')"><i class="fas fa-university"></i> 정책도서관</a></li>
+                                <li><a href="#" onclick="showBoard('study')"><i class="fas fa-users"></i> 스터디</a></li>
+                                <li><a href="#" onclick="showCategory('books')"><i class="fas fa-book"></i> 추천도서</a></li>
+                            </ul>
+                        </li>
+                        
+                        <!-- 기존 단일 메뉴들 -->
                         <li><a href="#" onclick="showBoard('career-prep')">취업준비</a></li>
-                        <li><a href="#" onclick="showBoard('news')">뉴스</a></li>
-                        <li><a href="#" onclick="showBoard('policy-library')">정책도서관</a></li>
-                        <li><a href="#" onclick="showBoard('faq')">자주나오는 질문</a></li>
-                        <li><a href="#" onclick="showBoard('study')">스터디</a></li>
-                        <li><a href="#" onclick="showCategory('books')">추천도서</a></li>
                         <li><a href="#" onclick="openKakaoChat()">카톡방</a></li>
                     </ul>
                     <div class="auth-section">
