--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <!-- 로그인 버튼을 메뉴 리스트 안으로 이동 -->
                         <li class="auth-section">
                             <!-- 로그인 전 버튼 -->
-                            <button id="login-btn" class="auth-btn login-btn" onclick="signInWithGoogle()">
+                            <button id="login-btn" class="auth-btn login-btn" onclick="if(typeof window.signInWithGoogle === 'function') window.signInWithGoogle(); else console.error('로그인 함수가 아직 로드되지 않았습니다.')">
                                 <i class="fab fa-google"></i> 로그인
                             </button>
                             
